--- a/templates/pass_yards.html
+++ b/templates/pass_yards.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-	<h2>Turnovers Win Championships</h2>
+	<h2>Passing Wins Championships</h2>
 	<div class="btn-group" role="group" aria-label="...">
 			<a href='/'>
 				<button type="button" class="btn btn-default">Turnovers</button>
@@ -27,7 +27,6 @@
 			<button type="button" class="btn btn-default">Data</button>
 			</a>
 		  </div>
-
 	<p id="chart"></p>
 
 	<script src="static/d3.js"></script>
@@ -46,8 +45,8 @@
 
 		// Various scales. These domains make assumptions of data, naturally.
 		//var xScale = d3.scale.log().domain([0, 1e5]).range([0, width]),
-		var 	xScale = d3.scale.linear().domain([0, 50]).range([0, width]),  
-				yScale = d3.scale.linear().domain([0, 50]).range([height, 0]),
+		var 	xScale = d3.scale.linear().domain([1500, 5500]).range([0, width]),  
+				yScale = d3.scale.linear().domain([1500, 5500]).range([height, 0]),
 				radiusScale = d3.scale.linear().domain([0, 50]).range([0, 100]),
 				//colorScale = d3.scale.category10();
 				colorScale = d3.scale.ordinal()
@@ -116,7 +115,7 @@
 					.attr("text-anchor", "end")
 					.attr("x", width)
 					.attr("y", height - 6)
-					.text("Turnovers");
+					.text("Passing Yards");
 
 				// Add a y-axis label.
 				svg.append("text")
@@ -125,7 +124,7 @@
 					.attr("y", 6)
 					.attr("dy", ".75em")
 					.attr("transform", "rotate(-90)")
-					.text("Takeaways");
+					.text("Passing Yards Allowed");
 
 				// Add the year label; the value is set on transition.
 				var label = svg.append("text")
@@ -133,15 +132,15 @@
 					.attr("text-anchor", "end")
 					.attr("y", height - 24)
 					.attr("x", width)
-					.text(1989);
+					.text(1970);
 
 		// Load the data.
 		d3.json("data.json", function(parliment) {
 
-		// A bisector since many teams' data is sparsely-defined.
+		// A bisector since many nation's data is sparsely-defined.
 		var bisect = d3.bisector(function(d) { return d[0]; });
 
-		// Add a dot per team. Initialize the data at 1989, and set the colors.
+		// Add a dot per nation. Initialize the data at 1945, and set the colors.
 		var dot = svg.append("g")
 			.attr("class", "dots")
 			.selectAll(".dot")
@@ -236,8 +235,8 @@
 				name: d.team,
 				region: d.team,
 				circleSize: interpolateValues(d.win, year),
-				horizontal: interpolateValues(d.turnovers, year),
-				vertical: interpolateValues(d.takeaways, year)
+				horizontal: interpolateValues(d.pass_yds, year),
+				vertical: interpolateValues(d.opp_pass_yd, year)
 			};
 			});
 		}
