--- a/static/style.css
+++ b/static/style.css
@@ -46,6 +46,7 @@ cursor: ew-resize;
 
 h2 {
 	font-family: 'UnifrakturMaguntia', cursive;
+	text-align: center;
 	text-shadow: 4px 4px 4px #aaa;
 	font-size: 50px;
 	margin: 0 0 0 30px;
