--- a/templates/rush_yards.html
+++ b/templates/rush_yards.html
@@ -23,6 +23,10 @@
 			<a href='/rush_yards'>
 				<button type="button" class="btn btn-default">Rushing Yard</button>
 			</a>
+			</a>
+			<a href='/points'>
+				<button type="button" class="btn btn-default">Points</button>
+			</a>
 			<a href='/data.json'>
 			<button type="button" class="btn btn-default">Data</button>
 			</a>
@@ -133,7 +137,7 @@
 					.attr("text-anchor", "end")
 					.attr("y", height - 24)
 					.attr("x", width)
-					.text(1970);
+					.text(1989);
 
 		// Load the data.
 		d3.json("data.json", function(parliment) {
