--- a/templates/pass_yards.html
+++ b/templates/pass_yards.html
@@ -240,7 +240,7 @@
 				region: d.team,
 				circleSize: interpolateValues(d.win, year),
 				horizontal: interpolateValues(d.pass_yds, year),
-				vertical: interpolateValues(d.opp_pass_yd, year)
+				vertical: interpolateValues(d.opp_pass_yds, year)
 			};
 			});
 		}
