--- a/templates/pass_yards.html
+++ b/templates/pass_yards.html
@@ -28,7 +28,7 @@
 			<a href='/points'>
 				<button type="button" class="btn btn-default">Points</button>
 			</a>
-			<a href='/data.json'>
+			<a href='/data'>
 			<button type="button" class="btn btn-default">Data</button>
 			</a>
 		  </div>
