--- a/templates/table.html
+++ b/templates/table.html
@@ -1,39 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.3/d3.min.js"></script>
-</head>
+        <title>NFL: Defense v. Offense</title>
 
-<body>
-  <h1 style='text-align: center'>Seasonal Raw Data</h1>
-  <p style='text-align: center'>Sourced from <a href='http://sportsdatabase.com/nfl/query'>Sports Database</a></p>
-  <div class="btn-group" role="group" aria-label="...">
-    <a href='/'>
-      <button type="button" class="btn btn-default">Turnovers</button>
-    </a>
-    <a href='/pass_yards'>
-      <button type="button" class="btn btn-default">Passing Yard</button>
-    </a>
-    <a href='/rush_yards'>
-      <button type="button" class="btn btn-default">Rushing Yard</button>
-    </a>
-    </a>
-    <a href='/points'>
-      <button type="button" class="btn btn-default">Points</button>
-    </a>
-    <a href='/data'>
-    <button type="button" class="btn btn-default">Data</button>
-    </a>
-  </div>
+         <!-- Bootstrap CSS CDN -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+        <!--jQuery and libraries for chart-->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+        
+        <!--CSS for chart-->
+        <link href='http://fonts.googleapis.com/css?family=UnifrakturMaguntia' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
+        <!-- Our Custom CSS -->
+		<link rel="stylesheet" href="static/style.css">
+		
+		<!-- jQuery CDN for html styling -->
+		<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+		<!-- Bootstrap Js CDN for html styling-->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="static/d3.js"></script>
+    </head>
+    <body>
+
+
+
+        <div class="wrapper">
+            <!-- Sidebar Holder -->
+            <nav id="sidebar">
+                <div class="sidebar-header">
+                    <h3>Project Links</h3>
+                </div>
+
+                <ul class="list-unstyled components">
+                    <li>
+                        <a href="#">Synopsis</a>
+                    </li>
+                    <li class="active">
+                        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Visualizations</a>
+                        <ul class="collapse list-unstyled" id="homeSubmenu">
+                            <li><a href="/">Turnovers</a></li>
+                            <li><a href="/pass_yards">Passing Yards</a></li>
+							<li><a href="/rush_yards">Rushing Yards</a></li>
+							<li><a href="/points">Points</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="/data">Data</a>
+                    </li>
+                    <li>
+                        <a href= "#pageSubmenu" data-toggle="collapse" aria-expanded="false">Group Members</a>
+                        <ul class="collapse list-unstyled" id="pageSubmenu">
+                            <li><a href="https://github.com/mu13j">Josh</a></li>
+                            <li><a href="https://github.com/coreyplott">Corey</a></li>
+                            <li><a href="https://github.com/ramchepuri">Ram</a></li>
+                            <li><a href="https://github.com/separks09">Sharon</a></li>
+                            <li><a href="https://github.com/kelvinhy2005">Kelvin</a></li>
+                        </ul>
+                    </li>
+
+                </ul>
+
+                <ul class="list-unstyled CTAs">
+                    <p>Original Data Sources</p>
+                    <li><a href="http://statheads.com/pro-football/query/" class="download">StatHeads.com</a></li>
+                    <li><a href="https://github.com/BurntSushi/nfldb" class="download">BurntSushi/nfldb</a></li>
+                </ul>
+            </nav>
+
+            <!-- Page Content Holder -->
+            <div id="content">
+
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+
+                        <div class="navbar-header">
+                            <button type="button" id="sidebarCollapse" class="btn btn-primary navbar-btn">
+                                <i class="glyphicon glyphicon-align-left"></i>
+                                <span>Toggle Sidebar</span>
+                            </button>
+                        </div>
+
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a href="#">Page</a></li>
+                                <li><a href="#">Page</a></li>
+                                <li><a href="#">Page</a></li>
+                                <li><a href="#">Page</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+
+                <h2>Collapsible Sidebar Using Bootstrap 3</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                <div class="line"></div>
+
+                <div id="chart"></div>
+
+                <div class="line"></div>
+
+                
+
+                <div class="line"></div>
+
+            </div>
+        </div>
   <div class="table-responsive">
         <table class="table table-striped">
           <thead>
