--- a/static/style.css
+++ b/static/style.css
@@ -149,15 +149,19 @@ a.download {
     MEDIAQUERIES
 ----------------------------------------------------- */
 
-#chart {
+
+
+#chart::after {
+    background-image:url('field.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-size: cover;
+    opacity: 0.2;
 }
 
-p {
-/*background-image:url('field.jpeg');
-background-position:40px 19px;	
-background-size:1000px 602px;
-background-repeat: no-repeat;*/
-}
+
+
+
 
 text {
 font: 10px sans-serif;
@@ -193,15 +197,13 @@ pointer-events: all;
 cursor: ew-resize;
 }
 
-h2 {
-	font-family: 'UnifrakturMaguntia', cursive;
+#myH3 {
 	text-align: center;
 	text-shadow: 4px 4px 4px #aaa;
 	font-size: 50px;
 	margin: 0 0 0 30px;
 	color: #333;
 }
-
 
 /* ---------------------------------------------------
     MEDIAQUERIES
