--- a/templates/chart.html
+++ b/templates/chart.html
@@ -407,5 +407,13 @@
 	gauge()
         
 	</script>
+	<script type="text/javascript">
+	$(document).ready(function () {
+		$('#sidebarCollapse').on('click', function () {
+			$('#sidebar').toggleClass('active');
+		});
+	});
+	</script>
+
 	</body>
 </html>
