--- a/templates/pass_yards.html
+++ b/templates/pass_yards.html
@@ -407,5 +407,12 @@
             ;}
 	gauge()
 	</script>
+	<script type="text/javascript">
+		$(document).ready(function () {
+			$('#sidebarCollapse').on('click', function () {
+				$('#sidebar').toggleClass('active');
+			});
+		});
+	</script>
 	</body>
 </html>
