--- a/templates/rush_yards.html
+++ b/templates/rush_yards.html
@@ -409,5 +409,12 @@
 	gauge()
         
 	</script>
+	<script type="text/javascript">
+		$(document).ready(function () {
+			$('#sidebarCollapse').on('click', function () {
+				$('#sidebar').toggleClass('active');
+			});
+		});
+	</script>
 	</body>
 </html>
