--- a/templates/chart.html
+++ b/templates/chart.html
@@ -40,21 +40,22 @@
 
                 <ul class="list-unstyled components">
                     <li>
-                        <a href="#">Synopsis</a>
+                        <a href="/synopsis">Synopsis</a>
                     </li>
                     <li class="active">
                         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Visualizations</a>
                         <ul class="collapse list-unstyled" id="homeSubmenu">
-                            <li><a href="/">Turnovers</a></li>
+                            <li><a href="/turnovers">Turnovers</a></li>
                             <li><a href="/pass_yards">Passing Yards</a></li>
 							<li><a href="/rush_yards">Rushing Yards</a></li>
 							<li><a href="/points">Points</a></li>
                         </ul>
                     </li>
                     <li>
-						<a href="/data.json">Data</a>
-						<li><a href="/data">Table</a></li>
-                    </li>
+							<a href="/data.json">Data</a>
+							<a href="/data">Table</a>
+							<a href="https://github.com/mu13j/Group-Project">GitHub Repository</a>
+					</li>
                     <li>
                         <a href= "#pageSubmenu" data-toggle="collapse" aria-expanded="false">Group Members</a>
                         <ul class="collapse list-unstyled" id="pageSubmenu">
@@ -84,24 +85,26 @@
                         <div class="navbar-header">
                             <button type="button" id="sidebarCollapse" class="btn btn-primary navbar-btn">
                                 <i class="glyphicon glyphicon-align-left"></i>
-                                <span>Sidebar</span>
+                                <span>Menu</span>
                             </button>
                         </div>
 
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#">Page</a></li>
-                                <li><a href="#">Page</a></li>
-                                <li><a href="#">Page</a></li>
-                                <li><a href="#">Page</a></li>
+								<!-- Trigger the modal with a button -->
+                                <li>	
+									<button type="button" class="btn btn-primary navbar-btn" id = "myGauge"
+									data-toggle="modal" data-target="#myModal" onclick="gauge()">Accuracy Gauge</button>
+								</li>
+                            
                             </ul>
                         </div>
                     </div>
                 </nav>
 
-                <h3 id = "myH3">Offensive vs. Defensive Stats</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h3>Takeaways vs. Turnovers</h3>
+                <p> Vizualizing wins (size of bubble) on one axis of the offensive statistic 
+					and another axis of the defensive statistic.</p>
 
                 <div class="line"></div>
 
@@ -115,7 +118,7 @@
 
             </div>
         </div>
-	<div id='gauge'></div>
+	
 
 	<script src="static/d3.js"></script>
 	<script>
@@ -404,9 +407,31 @@
 
                 Plotly.newPlot('gauge', data, layout);
             ;}
-	gauge()
         
 	</script>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">How accurate was this predictor?</h4>
+	  </div>
+	  <!--Plot guage in modal-->
+      <div class="modal-body" id='gauge'></div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+	<!--Collapse sidebar-->
 	<script type="text/javascript">
 	$(document).ready(function () {
 		$('#sidebarCollapse').on('click', function () {
