--- a/templates/synopsis.html
+++ b/templates/synopsis.html
@@ -40,20 +40,21 @@
 
                 <ul class="list-unstyled components">
                     <li>
-                        <a href="#">Synopsis</a>
+                        <a href="/synopsis">Synopsis</a>
                     </li>
                     <li class="active">
                         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Visualizations</a>
                         <ul class="collapse list-unstyled" id="homeSubmenu">
-                            <li><a href="/">Turnovers</a></li>
+                            <li><a href="/turnovers">Turnovers</a></li>
                             <li><a href="/pass_yards">Passing Yards</a></li>
 							<li><a href="/rush_yards">Rushing Yards</a></li>
 							<li><a href="/points">Points</a></li>
                         </ul>
                     </li>
                     <li>
-						<a href="/data.json">Data</a>
-						<li><a href="/data">Table</a></li>
+                            <a href="/data.json">Data</a>
+                            <a href="/data">Table</a>
+                            <a href="https://github.com/mu13j/Group-Project">GitHub Repository</a>
                     </li>
                     <li>
                         <a href= "#pageSubmenu" data-toggle="collapse" aria-expanded="false">Group Members</a>
@@ -84,29 +85,58 @@
                         <div class="navbar-header">
                             <button type="button" id="sidebarCollapse" class="btn btn-primary navbar-btn">
                                 <i class="glyphicon glyphicon-align-left"></i>
-                                <span>Sidebar</span>
+                                <span>Menu</span>
                             </button>
                         </div>
 
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#">Page</a></li>
-                                <li><a href="#">Page</a></li>
-                                <li><a href="#">Page</a></li>
-                                <li><a href="#">Page</a></li>
-                            </ul>
-                        </div>
+                       
                     </div>
                 </nav>
 
-                <h3 id = "myH3">Offensive vs. Defensive Stats</h3>
-                <!--<p>for summary paragraph(s)</p>-->
+                <h1>What Wins Football Games: Offense or Defense?</h1>
+                <h3> Team Members: Sharon Parks, Joshua Mu, Kelvin So, Ram Chepuri, Corey Plott</h3>
+                <p> Project Scope: Comparing the offensive and defensive stats for all NFL teams during the year for the last twenty years and analyzing how those stats yield wins. </p>
+                <p> Initial hypothesis: While the phrase “Defense wins championships, but offense wins games” is popular among the football community, our group is interested how accurate this statement is. 
+                  
+                 <p> Data pulled:
+                  1.	Defensive stats allowed (y-axis):
+                      a.	Turnovers allowed
+                      b.	Passing yards allowed
+                      c.	Rushing yards allowed and 
+                      d.	Points allowed
+                  2.	Offensive stats gained (x axis):
+                      a.	Turnovers 
+                      b.	Passing yards gained
+                      c.	Rushing yards gained and
+                      d.	Points scored
+                  3.	Team wins (bubble radius)
+                  </p>    
+                   </p>
+              
+                   <p>Inspiring visualization: The final product, a motion chart like the one below, will show the offensive yards on the x axis, the defensive yards allowed on the y axis and the team wins will reflect the bubble radius. </p>
+              
+                 <img src="http://3.bp.blogspot.com/_ZyD6dMHokUQ/TSEqL-hgbmI/AAAAAAAAAEw/YHfbvl7zrpU/s1600/gapminder.jpg" 
+                    style="width:800px;height:500px;" class="img-fluid float-right">
+                   </p>
+                   <p><a href="http://sportsdatabase.com/nfl/query">Link to database: http://sportsdatabase.com/nfl</a></p>
+                    <p><a href="https://github.com/mu13j/Group-Project">Github Repository: https://github.com/mu13j/Group-Project</a></p>
+                     <p>   Technologies used: Python Flask Restful API, D3 chart, User interaction: dropdowns of Team, Year, and home vs away, Database = Statheads.com user database, D3
+                   </p>
+                         
+              <footer class="page-footer">
+              
+                  <!--Copyright-->
+                  <div class="footer-copyright">
+                    &copy; Copyright Coding Bootcamp 2018
+                     
+                  </div>
+                  <!--/.Copyright-->
+                
+              </footer>
 
                 <div class="line"></div>
 
-                <!--div to hold image-->
-
-                <div class="line"></div>
+                    <div class="line"></div>
 
             </div>
         </div>
