--- a/templates/pass_yards.html
+++ b/templates/pass_yards.html
@@ -103,7 +103,7 @@
                 </nav>
 
                 <h3>Passing Yards vs. Passing Yards Allowed</h3>
-                <p> Vizualizing wins (size of bubble) on one axis of the offensive statistic and another 
+                <p> Visualizing wins (size of bubble) on one axis of the offensive statistic and another 
 					axis of the defensive statistic. </p>
 
                 <div class="line"></div>
