--- a/templates/points.html
+++ b/templates/points.html
@@ -103,7 +103,7 @@
                 </nav>
 
                 <h3>Points Scored vs. Points Allowed</h3>
-                <p> Vizualizing wins (size of bubble) on one axis of the offensive 
+                <p> Visualizing wins (size of bubble) on one axis of the offensive 
 					statistic and another axis of the defensive statistic. </p>
 
                 <div class="line"></div>
