--- a/templates/chart.html
+++ b/templates/chart.html
@@ -103,7 +103,7 @@
                 </nav>
 
                 <h3>Takeaways vs. Turnovers</h3>
-                <p> Vizualizing wins (size of bubble) on one axis of the offensive statistic 
+                <p> Visualizing wins (size of bubble) on one axis of the offensive statistic 
 					and another axis of the defensive statistic.</p>
 
                 <div class="line"></div>
