--- a/templates/rush_yards.html
+++ b/templates/rush_yards.html
@@ -103,7 +103,7 @@
                 </nav>
 
                 <h3>Rushing Yards vs. Rushing Yards Allowed</h3>
-				<p> Vizualizing wins (size of bubble) on one axis of the offensive statistic and 
+				<p> Visualizing wins (size of bubble) on one axis of the offensive statistic and 
 					another axis of the defensive statistic. </p>
 
                 <div class="line"></div>
