--- a/templates/synopsis.html
+++ b/templates/synopsis.html
@@ -120,8 +120,8 @@
                    </p>
                    <p><a href="http://sportsdatabase.com/nfl/query">Link to database: http://sportsdatabase.com/nfl</a></p>
                     <p><a href="https://github.com/mu13j/Group-Project">Github Repository: https://github.com/mu13j/Group-Project</a></p>
-                     <p>   Technologies used: Python Flask Restful API, D3 chart, User interaction: dropdowns of Team, Year, and home vs away, Database = Statheads.com user database, D3
-                   </p>
+                     <p>   Technologies used: Python, Flask, SQLAlchemy, SQLite, RESTful API, D3, Plotly, Bootstrap. </p>
+                     <p>   User interaction: Motion Chart, Searchable Table, Dropdown Menus</p>
                          
               <footer class="page-footer">
               
