--- a/templates/rush_yards.html
+++ b/templates/rush_yards.html
@@ -70,9 +70,8 @@
                 </ul>
 
                 <ul class="list-unstyled CTAs">
-                    <p>Original Data Sources</p>
-                    <li><a href="http://statheads.com/pro-football/query/" class="download">StatHeads.com</a></li>
-                    <li><a href="https://github.com/BurntSushi/nfldb" class="download">BurntSushi/nfldb</a></li>
+                    <p>Original Data Source</p>
+                    <li><a href="http://sportsdatabase.com/nfl/query" class="download">sportsdatabase.com</a></li>
                 </ul>
             </nav>
 
