--- a/templates/table.html
+++ b/templates/table.html
@@ -60,6 +60,7 @@
                     <li>
                             <a href="/data.json">Data</a>
                             <a href="/data">Table</a>
+                            <a href="/calculator">Wins Calculator</a>
                             <a href="https://github.com/mu13j/Group-Project">GitHub Repository</a>
                     </li>
                     <li>
@@ -76,9 +77,8 @@
                 </ul>
 
                 <ul class="list-unstyled CTAs">
-                    <p>Original Data Sources</p>
-                    <li><a href="http://statheads.com/pro-football/query/" class="download">StatHeads.com</a></li>
-                    <li><a href="https://github.com/BurntSushi/nfldb" class="download">BurntSushi/nfldb</a></li>
+                    <p>Original Data Source</p>
+                    <li><a href="http://sportsdatabase.com/nfl/query" class="download">sportdatabase.com</a></li>
                 </ul>
             </nav>
 
