--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -6,11 +6,86 @@
   <title>Win Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <!--jQuery and libraries for chart-->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+
+  <!-- Our Custom CSS -->
+<link rel="stylesheet" href="static/style.css">
+
+<!-- Bootstrap Js CDN for html styling-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
+  <!--Datatables CSS-->
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.18/css/jquery.dataTables.css">
 </head>
 
 <body>
+    <script type="text/javascript">
+      $(document).ready(function () {
+          $('#sidebarCollapse').on('click', function () {
+              $('#sidebar').toggleClass('active');
+          });
+      });
+  </script>
   <div class="wrapper">
+      <nav id="sidebar">
+          <div class="sidebar-header">
+              <h3>Project Links</h3>
+          </div>
+
+          <ul class="list-unstyled components">
+              <li>
+                  <a href="/synopsis">Synopsis</a>
+              </li>
+              <li class="active">
+                  <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Visualizations</a>
+                  <ul class="collapse list-unstyled" id="homeSubmenu">
+                      <li><a href="/turnovers">Turnovers</a></li>
+                      <li><a href="/pass_yards">Passing Yards</a></li>
+        <li><a href="/rush_yards">Rushing Yards</a></li>
+        <li><a href="/points">Points</a></li>
+                  </ul>
+              </li>
+              <li>
+                      <a href="/data.json">Data</a>
+                      <a href="/data">Table</a>
+                      <a href="/calculator">Wins Calculator</a>
+                      <a href="https://github.com/mu13j/Group-Project">GitHub Repository</a>
+              </li>
+              <li>
+                  <a href= "#pageSubmenu" data-toggle="collapse" aria-expanded="false">Group Members</a>
+                  <ul class="collapse list-unstyled" id="pageSubmenu">
+                      <li><a href="https://github.com/mu13j">Josh</a></li>
+                      <li><a href="https://github.com/coreyplott">Corey</a></li>
+                      <li><a href="https://github.com/ramchepuri">Ram</a></li>
+                      <li><a href="https://github.com/separks09">Sharon</a></li>
+                      <li><a href="https://github.com/kelvinhy2005">Kelvin</a></li>
+                  </ul>
+              </li>
+
+          </ul>
+
+          <ul class="list-unstyled CTAs">
+              <p>Original Data Source</p>
+              <li><a href="http://sportsdatabase.com/nfl/query" class="download">sportsdatabase.com</a></li>
+          </ul>
+      </nav>
+  <div id='content'>
+      <nav class="navbar navbar-default">
+          <div class="container-fluid">
+
+              <div class="navbar-header">
+                  <button type="button" id="sidebarCollapse" class="btn btn-primary navbar-btn">
+                      <i class="glyphicon glyphicon-align-left"></i>
+                      <span>Menu</span>
+                  </button>
+              </div>
+
+          </div>
+      </nav>
     <div class="container">
       <div class="row margin-top-50">
         <div class="col-md-12">
@@ -56,6 +131,10 @@
                     <li class="list-group-item">
                       <button id="filter-submit" class="btn btn-success">Calculate Wins</button>
                     </li>
+                  </div>
+                  <h2 style='text-align:center'>Expected Wins:</h2>
+                  <h2 id='calculation' style='text-align:center'>8</h2>
+                  </div>
                   </ul>
                 </div>
               </div>
@@ -64,9 +143,6 @@
         </div>
       </div>
     </div>
-    <h1 style='text-align:center'>Expected Wins:</h1>
-    <h1 id='calculation' style='text-align:center'>8</h1>
-  </div>
   <script src="static/calculator.js"></script>
 </body>
 
