--- a/templates/points.html
+++ b/templates/points.html
@@ -54,6 +54,7 @@
                     <li>
 						<a href="/data.json">Data</a>
 						<a href="/data">Table</a>
+						<a href="/calculator">Wins Calculator</a>
 						<a href="https://github.com/mu13j/Group-Project">GitHub Repository</a>
 					</li>
 					<li>
