--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -19,7 +19,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
   <!--Datatables CSS-->
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.18/css/jquery.dataTables.css">
 </head>
 
 <body>
@@ -45,8 +44,9 @@
                   <ul class="collapse list-unstyled" id="homeSubmenu">
                       <li><a href="/turnovers">Turnovers</a></li>
                       <li><a href="/pass_yards">Passing Yards</a></li>
-        <li><a href="/rush_yards">Rushing Yards</a></li>
-        <li><a href="/points">Points</a></li>
+                      <li><a href="/rush_yards">Rushing Yards</a></li>
+                      <li><a href="/points">Points</a></li>
+                      <li><a href="/multiline">Multiline</a></li>
                   </ul>
               </li>
               <li>
