--- a/templates/synopsis.html
+++ b/templates/synopsis.html
@@ -48,7 +48,8 @@
                             <li><a href="/turnovers">Turnovers</a></li>
                             <li><a href="/pass_yards">Passing Yards</a></li>
 							<li><a href="/rush_yards">Rushing Yards</a></li>
-							<li><a href="/points">Points</a></li>
+                            <li><a href="/points">Points</a></li>
+                            <li><a href="/multiline">Multiline</a></li>
                         </ul>
                     </li>
                     <li>
