--- a/templates/rush_yards.html
+++ b/templates/rush_yards.html
@@ -49,6 +49,7 @@
                             <li><a href="/pass_yards">Passing Yards</a></li>
 							<li><a href="/rush_yards">Rushing Yards</a></li>
 							<li><a href="/points">Points</a></li>
+							<li><a href="/multiline">Multiline</a></li>
                         </ul>
                     </li>
                     <li>
